Add item icons to skills in Skills GUI